<resources>
    <string name="app_name">Hush</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="hush">hush</string>
    <string name="chat_rant_r">chat \u00B7 rant \u00B7 rate</string>
    <string name="what_s_your">what\'s your university\nemail address?</string>
    <string name="we_will_sen">we will send you a \nverification code.</string>
    <string name="next">next</string>
    <string name="enter_the_v">enter the verification\ncode we sent.</string>
    <string name="we_can_rese">we can resend your\ncode after 30 seconds.</string>
    <string name="resend">resend</string>
    <string name="this_will_b">this will be your\nusername.</string>
    <string name="try_to_keep">try to keep it anonymous,\nthat\'s what makes this fun.</string>
    <string name="optional_in">optional information</string>
    <string name="secure_your">secure your account,\nchoose a password.</string>
    <string name="password_mu">password must be at least 8 characters</string>
    <string name="try_to_make">try to make it at least 8 characters</string>
    <string name="here_at_hus">here at hush we \nbelieve in anonymity.\nwe don\'t sell data or\nuse it to target ads.\n\nyour email will be used\nfor login purposes and\nto confirm your school.</string>
    <string name="welcome_bac">welcome back</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="remember_me">remember me</string>
    <string name="invalid_ema">invalid email or password.</string>
    <string name="news_feed">news feed</string>
    <string name="newest">newest</string>
    <string name="oldest">oldest</string>
    <string name="hottest">hottest</string>
    <string name="controv">controv.</string>
    <string name="rising">rising</string>
    <string name="post">post</string>
    <string name="post_title">Title Here</string>
    <string name="post_text">post text</string>
    <string name="time_stamp">x hours ago</string>
    <string name="tags">tags</string>
    <string name="search">search</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="write_post">write post</string>
    <string name="write_comment">write comment</string>
    <string name="add_a_title">Add a title for your post</string>
    <string name="add_at_leas">Add at least one tag</string>
    <string-array name="majors_array">
        <item>Major</item><item>Accountancy</item><item>Actuarial Science and Risk Management</item><item>Advertising</item><item>Aerospace Engineering</item><item>African American Studies</item><item>African Studies</item><item>Agricultural and Biological Engineering</item><item>Agricultural and Consumer Economics</item><item>Agricultural Communications</item><item>Agricultural Education</item><item>Agricultural Leadership, Education, and Communications Program</item><item>Agricultural, Consumer and Environmental Sciences</item><item>Air Force Aerospace Studies</item><item>American Indian Studies</item><item>Animal Sciences</item><item>Anthropology</item><item>Applied Health Sciences Courses</item><item>Arabic</item><item>Architecture</item><item>Art</item><item>Art--Design</item><item>Art--Education</item><item>Art--Foundation</item><item>Art--History</item><item>Art--Studio</item><item>Asian American Studies</item><item>Asian Studies</item><item>Astronomy</item><item>Atmospheric Sciences</item><item>Basque</item><item>Biochemistry</item><item>Bioengineering</item><item>Biology</item><item>Biomedical Sciences and Engineering</item><item>Biophysics</item><item>Bosnian-Croatian-Serbian</item><item>Brain and Cognitive Science</item><item>Bulgarian</item><item>Business</item><item>Business Administration</item><item>Business and Technical Writing</item><item>Campus Honors Program Courses</item><item>Catalan</item><item>Cell and Developmental Biology</item><item>Center for Advanced Study</item><item>Chemical and Biomolecular Engineering</item><item>Chemistry</item><item>Chinese</item><item>Civil and Environmental Engineering</item><item>Classical Civilization</item><item>Clinical Sciences and Engineering</item><item>Committee on Inst Cooperation</item><item>Communication</item><item>Community Health</item><item>Comparative and World Literature</item><item>Comparative Biosciences</item><item>Computational Science and Engineering</item><item>Computer Science</item><item>Creative Writing</item><item>Crop Sciences</item><item>Curriculum and Instruction</item><item>Czech</item><item>Dance</item><item>Earth, Society, and Environment</item><item>East Asian Language and Culture</item><item>Economics</item><item>Education</item><item>Education Policy, Organization and Leadership</item><item>Educational Organization and Leadership</item><item>Educational Policy Studies</item><item>Educational Practice</item><item>Educational Psychology</item><item>Electrical and Computer Engineering</item><item>Engineering</item><item>Engineering Honors</item><item>English</item><item>English as a Second Language</item><item>English as an International Language</item><item>Entomology</item><item>Environmental Studies</item><item>Environmental Sustainability</item><item>European Union Studies</item><item>Finance</item><item>Fine and Applied Arts</item><item>Food Science and Human Nutrition</item><item>Foreign Language Teacher Education</item><item>French</item><item>Gender and Women\'s Studies</item><item>General Studies</item><item>Geography</item><item>Geology</item><item>German</item><item>Germanic</item><item>Global Studies</item><item>Graduate College</item><item>Grand Challenge Learning</item><item>Greek</item><item>Health Technology</item><item>Hebrew, Modern and Classical</item><item>Hindi</item><item>History</item><item>Horticulture</item><item>Human Development and Family Studies</item><item>Human Dimensions of Environmental Systems</item><item>Human Resource Development</item><item>Humanities Courses</item><item>Industrial Engineering</item><item>Informatics</item><item>Information Sciences</item><item>Integrative Biology</item><item>Interdisciplinary Health Sciences</item><item>Italian</item><item>Japanese</item><item>Jewish Studies</item><item>Journalism</item><item>Kinesiology</item><item>Korean</item><item>Labor and Employment Relations</item><item>Landscape Architecture</item><item>Latin</item><item>Latin American and Caribbean Studies</item><item>Latina/Latino Studies</item><item>Law</item><item>Liberal Arts and Sciences</item><item>Lingala</item><item>Linguistics</item><item>Literatures, Cultures, and Linguistics</item><item>Materials Science and Engineering</item><item>Mathematics</item><item>Mechanical Engineering</item><item>Media</item><item>Media and Cinema Studies</item><item>Medieval Studies</item><item>Metropolitan Food and Environmental Systems</item><item>Microbiology</item><item>Military Science</item><item>Modern Greek</item><item>Molecular and Cell Biology</item><item>Molecular and Integrative Physiology</item><item>Museum Studies</item><item>Music</item><item>Natural Resources and Environmental Sciences</item><item>Naval Science</item><item>Neuroscience</item><item>Nuclear, Plasma, and Radiological Engineering</item><item>Nutritional Sciences</item><item>Organizational and Community Leadership</item><item>Pathobiology</item><item>Persian</item><item>Philosophy</item><item>Physics</item><item>Plant Biology</item><item>Plant Pathology</item><item>Polish</item><item>Political Science</item><item>Portuguese</item><item>Professional Science Master\'s Program</item><item>Psychology</item><item>Recreation, Sport, and Tourism</item><item>Regular MBA Program Administration</item><item>Rehabilitation Counseling</item><item>Religion</item><item>Rhetoric and Composition</item><item>Romance Linguistics</item><item>Rural Sociology</item><item>Russian</item><item>Russian, East European and Eurasian Studies</item><item>Sanskrit</item><item>Scandinavian</item><item>Second Language Studies</item><item>Slavic</item><item>Social Work</item><item>Sociology</item><item>South Asian and Middle Eastern Studies</item><item>Spanish</item><item>Special Education</item><item>Speech and Hearing Science</item><item>Statistics</item><item>Strategic Brand Communication</item><item>Swahili</item><item>Systems Engineering and Design</item><item>Technical Systems Management</item><item>Technology and Management Courses</item><item>Technology Entrepreneurship</item><item>Theatre</item><item>Theoretical and Applied Mechanics</item><item>Translation Studies</item><item>Turkish</item><item>Ukrainian</item><item>Urban and Regional Planning</item><item>Veterinary Clinical Medicine</item><item>Veterinary Medicine Courses</item><item>Wolof</item><item>Women and Gender in Global Perspectives Program</item><item>Writing Studies</item><item>Yiddish</item><item>Zulu</item>
    </string-array>
    <string-array name="sorting_options">
        <item>Newest</item>
        <item>Oldest</item>
        <item>Hottest</item>
        <item>Controversial</item>
    </string-array>
</resources>
