<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_screen"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#564CF5"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/hush"
        android:layout_width="133dp"
        android:layout_height="82dp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="203dp"
        android:text="@string/hush"
        android:textAppearance="@style/hush"
        android:gravity="center_horizontal|top"
        />

    <TextView
        android:id="@+id/chat_rant_r"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="263dp"
        android:text="@string/chat_rant_r"
        android:textAppearance="@style/chat_rant_r"
        android:gravity="center_horizontal|top"
        />



    <Button
       android:id="@+id/sign_up"
       android:layout_width="200dp"
       android:layout_height="50dp"
       android:layout_centerInParent="true"
       android:layout_alignParentTop="true"
       android:layout_marginTop="547dp"
       android:text="@string/sign_up"
       android:textColor="@color/colorPrimary"
       android:textAppearance="@style/sign_up"
       android:gravity="center_horizontal|center_vertical"
       android:background="#FFFFFF"></Button>

    <Button
        android:id="@+id/sign_in"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="613dp"
        android:text="@string/sign_in"
        android:textAppearance="@style/sign_in"
        android:gravity="center_horizontal|center_vertical"
        android:background="@color/colorPrimary"
       ></Button>

</RelativeLayout>