<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_screen"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    android:background="#564CF5"
    tools:context=".SignIn">

    <Button
        android:id="@+id/back_white_"
        android:layout_width="18.8dp"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="27dp"
        android:layout_="true"
        android:layout_marginTop="27dp"
        android:background="@drawable/back_white_"
        android:textColor="#FFFFFF"></Button>

    <TextView
        android:id="@+id/welcome_bac"
        android:layout_width="175dp"
        android:layout_height="38dp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:text="@string/welcome_bac"
        android:textAppearance="@style/welcome_bac"
        android:gravity="center_horizontal|top"
        />


    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="183dp"
        android:text="@string/email"
        android:textAppearance="@style/what_s_your"
        android:gravity="center_horizontal|top"
        />

    <EditText
        android:id="@+id/rectangle"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="244dp"
        android:layout_centerInParent="true"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:background="@drawable/enter_email"
        android:gravity="center"
        android:hint="yournetid@illinois.edu"></EditText>

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="308dp"
        android:text="@string/password"
        android:textAppearance="@style/what_s_your"
        android:gravity="center_horizontal|top"
        />

    <EditText
        android:id="@+id/pwd"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="369dp"
        android:layout_centerInParent="true"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:background="@drawable/enter_email"
        android:gravity="center"
        android:inputType="textPassword"
        android:text="BoisterousBurrito"></EditText>

<!--    <TextView-->
<!--        android:id="@+id/remember_me"-->
<!--        android:layout_width="112dp"-->
<!--        android:layout_height="24dp"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:layout_marginTop="433dp"-->
<!--        android:text="@string/remember_me"-->
<!--        android:textAppearance="@style/try_to_make"-->
<!--        android:gravity="center_horizontal|top"-->
<!--        />-->

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="433dp"
        android:textAppearance="@style/try_to_make"
        android:textColor="@color/white"
        android:buttonTint="@color/white"
        android:text="@string/remember_me" />

    <Button
        android:id="@+id/next"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="547dp"
        android:text="@string/sign_in"
        android:textAppearance="@style/sign_in"
        android:gravity="center_horizontal|center_vertical"
        android:background="@drawable/rounded_button_inactive"

        ></Button>



</RelativeLayout>