<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/news_feed_activity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    android:background="#FFFFFF">
    <RelativeLayout
        android:id="@+id/news_feed_bar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentTop="true"
        android:background="#564CF5">
        <TextView
            android:id="@+id/news_feed_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/news_feed"
            android:textAppearance="@style/news_feed"
            android:gravity="center">
        </TextView>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/news_feed_bar"
        android:layout_above="@id/tab_bar"
        android:background="#E5E5E5">
        <LinearLayout
            android:id="@+id/sort_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_alignParentTop="true"
            android:background="#FFFFFFFF">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/newest"
                android:textColor="#564CF5"
                android:background="#FFFFFF"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/oldest"
                android:textColor="#564CF5"
                android:background="#FFFFFF"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/hottest"
                android:textColor="#FFFFFF"
                android:background="#564CF5"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/controv"
                android:textColor="#564CF5"
                android:background="#FFFFFF"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/rising"
                android:textColor="#564CF5"
                android:background="#FFFFFF"/>
        </LinearLayout>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/sort_bar"
            android:layout_alignParentBottom="true"
            android:divider="#ffffffff"
            android:dividerHeight="10.0sp">

        </ListView>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/tab_bar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="#564CF5">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">
            <ImageView
                android:layout_centerInParent="true"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/ic_home_24px"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">
            <ImageView
                android:layout_centerInParent="true"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/ic_search_24px"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">
            <ImageView
                android:layout_centerInParent="true"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/ic_person_24px"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">
            <ImageView
                android:layout_centerInParent="true"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/ic_post_add_24px"
                />
        </RelativeLayout>
    </LinearLayout>

    <!-- drawable/rectangle.xml -->

</RelativeLayout>