<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".PostView">
    <RelativeLayout
        android:id="@+id/post_view_activity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF">
    <RelativeLayout
        android:id="@+id/post_view_bar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentTop="true"
        android:background="#564CF5">
        <TextView
            android:id="@+id/post_view_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/post"
            android:textAppearance="@style/news_feed"
            android:gravity="center">
        </TextView>

        <Button
            android:id="@+id/back_white_"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="22dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:layout_centerInParent="true"
            android:background="@drawable/back_white_"
            android:textColor="#FFFFFF"></Button>

    </RelativeLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/post_view_bar"
        android:layout_alignParentBottom="true"
        android:background="#E5E5E5">
        <RelativeLayout
            android:id="@+id/post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFFFF"
            android:padding="10dp"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/post_title"
                android:textColor="#ff000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_title"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/post_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/post_title"
                android:text="@string/post_text"
                android:textColor="#ff000000"
                android:layout_margin="8dp"/>

            <TextView
                android:id="@+id/time_stamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/post_text"
                android:text="@string/time_stamp"/>
            <TextView
                android:id="@+id/tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/post_text"
                android:layout_toRightOf="@id/time_stamp"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="@string/tags"/>
            <LinearLayout
                android:id="@+id/like_dislike_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/time_stamp"
                android:orientation="horizontal"
                android:background="#ffffff"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp">
                <ImageButton
                    android:id="@+id/like_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_thumb_up_24px"
                    android:layout_gravity="center_vertical"
                    android:background="#ffffff">

                </ImageButton>

                <ImageButton
                    android:id="@+id/dislike_button"
                    android:paddingLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_thumb_down_24px"
                    android:layout_gravity="center_vertical"
                    android:background="#ffffff"/>
            </LinearLayout>

        </RelativeLayout>

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/post"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="0dp"
            android:divider="#ffffffff"
            android:dividerHeight="10.0sp">

        </ListView>



    </RelativeLayout>


    <!-- drawable/rectangle.xml -->

</RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton

        app:backgroundTint="@color/colorPrimary"
        android:id="@+id/write_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_post_add_24px" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>